Corrected category tags by eliminating trailing commas.
modified:   _posts/2003-03-24-fictitious-times.markdown
modified:   _posts/2003-03-25-declaration-of-conscience.markdown
modified:   _posts/2003-03-28-the-war-for-cell-phones.markdown
modified:   _posts/2003-03-31-accountability.markdown
modified:   _posts/2003-04-01-more-accountability.markdown
modified:   _posts/2003-04-02-my-understanding.markdown
modified:   _posts/2003-04-08-dominos-falling.markdown
modified:   _posts/2003-04-09-patriotism.markdown
modified:   _posts/2003-04-20-countering-a-wave-of-hate.markdown
modified:   _posts/2003-04-21-revolution-is-not-an-aol-keyword.markdown
modified:   _posts/2003-06-20-hoisted-on-his-own-petard.markdown
modified:   _posts/2003-08-26-this-is-just-wrong.markdown
modified:   _posts/2003-09-14-what-is-at-stake.markdown
modified:   _posts/2003-11-19-today-in-1863.markdown
modified:   _posts/2003-11-30-december-1st-world-aids-day.markdown
modified:   _posts/2003-12-23-cast-your-vote.markdown
modified:   _posts/2004-01-22-gay-marriage-poll-gets-annulled.markdown
modified:   _posts/2004-02-08-the-real-problem-is-violence-aganst-women.markdown
modified:   _posts/2004-03-05-survivor-disgrace.markdown
modified:   _posts/2004-04-29-simply-profound.markdown
modified:   _posts/2004-06-06-sixty-years-ago-today.markdown
modified:   _posts/2004-07-25-fahrenheit-911.markdown
modified:   _posts/2004-11-12-no-union-no-vacation.markdown
modified:   _posts/2004-12-20-absolutely-nothing.markdown
modified:   _posts/2005-02-07-victim-mentality.markdown
modified:   _posts/2005-09-07-blame-is-not-the-answer.markdown
modified:   _posts/2005-09-10-bush-disaster.markdown
modified:   _posts/2005-09-21-social-responsibility.markdown
modified:   _posts/2006-05-08-wwjd.markdown
modified:   _posts/2006-07-27-best-television-ever.markdown
modified:   _posts/2006-11-07-shake-your-booty.markdown
modified:   _posts/2007-07-26-inside-iraq.markdown
modified:   _posts/2007-12-02-facebook-farewell.markdow

--- a/source/_posts/2006-05-08-wwjd.markdown
+++ b/source/_posts/2006-05-08-wwjd.markdown
@@ -3,7 +3,7 @@ layout: post
 title: WWJD
 date: 2006-5-8
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 (As seen on <a href="http://www.inluminent.com/" title="inluminet">inluminet</a>)
