--- a/source/_posts/2003-11-19-today-in-1863.markdown
+++ b/source/_posts/2003-11-19-today-in-1863.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Today, in 1863
 date: "2003-11-19"
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 Gettysburg Address
