--- a/source/_posts/2008-08-21-links-for-2008-08-21.markdown
+++ b/source/_posts/2008-08-21-links-for-2008-08-21.markdown
@@ -3,7 +3,7 @@ layout: post
 title: links for 2008-08-21
 date: 2008-8-21
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 <ul class="delicious"><li>
