--- a/source/_posts/2008-08-24-links-for-2008-08-24.markdown
+++ b/source/_posts/2008-08-24-links-for-2008-08-24.markdown
@@ -3,7 +3,7 @@ layout: post
 title: links for 2008-08-24
 date: 2008-8-24
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 <ul class="delicious"><li>
