--- a/source/_posts/2008-08-25-links-for-2008-08-25.markdown
+++ b/source/_posts/2008-08-25-links-for-2008-08-25.markdown
@@ -3,7 +3,7 @@ layout: post
 title: links for 2008-08-25
 date: 2008-8-25
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 <ul class="delicious"><li>
