--- a/source/_posts/2008-08-30-links-for-2008-08-30.markdown
+++ b/source/_posts/2008-08-30-links-for-2008-08-30.markdown
@@ -3,7 +3,7 @@ layout: post
 title: links for 2008-08-30
 date: 2008-8-30
 comments: true
-categories: social issues
+categories: issues
 link: false
 ---
 <ul class="delicious"><li>
