--- a/source/_posts/2012-02-12-taken.markdown
+++ b/source/_posts/2012-02-12-taken.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Taken"
 date: 2012-02-12 21:04
 comments: true
-categories: book
+categories: books
 link: false
 ---
 {{ "0399158278" | amazon_mediumleft_image }}  
