--- a/source/_posts/2013-03-29-my-setup.markdown
+++ b/source/_posts/2013-03-29-my-setup.markdown
@@ -9,7 +9,7 @@ link: false
 The [Uses This](http://usesthis.com "Uses This") series, and Shawn Blanc's [Sweet Mac Setups](http://shawnblanc.net/sweet-mac-setups/ "Sweet Mac Setups") series have always intrigued me, so I decided to write one of my own.
 
 ##Who are you and what do you do?
-My name is Mark Nichols. I'm married to [Sibylle Kuder](http://sibyllekuder.com "Sibylle Kuder Piano Studio"), I play [violoncello](http://cello.zanshin.net "Solfège"), I hack around with [various computer technologys](http://github/com/zan5hin "My GitHub"), and I'm an all-around good guy. Professionally I work for Kansas State University as an "Integration Services Coordinator" — dealing with the sometimes messy intersection of differing systems and their needs. Lately I've been diving into the world of [Vagrant](http://www.vagrantup.com "Vagrant") and [Chef](http://www.opscode.com/chef/ "Chef").
+My name is Mark Nichols. I'm married to [Sibylle Kuder](http://sibyllekuder.com "Sibylle Kuder Piano Studio"), I play [violoncello](http://cello.zanshin.net "Solfège"), I hack around with [various computer technologies](http://github/com/zan5hin "My GitHub"), and I'm an all-around good guy. Professionally I work for Kansas State University as an "Integration Services Coordinator" — dealing with the sometimes messy intersection of differing systems and their needs. Lately I've been diving into the world of [Vagrant](http://www.vagrantup.com "Vagrant") and [Chef](http://www.opscode.com/chef/ "Chef").
 
 ##What hardware do you use?
 My personal computer is a mid-2009 [15" 2009 MacBook Pro](http://support.apple.com/kb/SP544?viewlocale=en_US&locale=en_US "15-inch Mid 2009") with a 2.66 GHz Core 2 Duo processor and 8 GB of RAM. Within the next week the original 320 GB hard drive will be replaced with a new 1 TB drive.
